apps/websites/middleware-security-headers.yaml
# SPDX-FileCopyrightText: Hadi Cherkaoui <contact@hide.cherkaoui.ch>
#
# SPDX-License-Identifier: AGPL-3.0-or-later

apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: security-headers
  namespace: websites
spec:
  headers:
    browserXssFilter: true
    contentTypeNosniff: true
    stsSeconds: 63072000
    stsIncludeSubdomains: true
    stsPreload: true
    referrerPolicy: "no-referrer-when-downgrade"
    contentSecurityPolicy: "default-src 'self' 'unsafe-inline' 'unsafe-eval'; img-src 'self' data: blob:; font-src * data:; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com https://fonts.bunny.net; connect-src 'self'; worker-src 'self' blob:; frame-ancestors 'self'; object-src 'none'; base-uri 'self'"
    permissionsPolicy: "geolocation=(), microphone=(), camera=(), fullscreen=()"
