apps/websites/deploy-docs.yaml
# SPDX-FileCopyrightText: Hadi Cherkaoui <contact@hide.cherkaoui.ch>
#
# SPDX-License-Identifier: AGPL-3.0-or-later

apiVersion: apps/v1
kind: Deployment
metadata:
  name: docs
  namespace: websites
  labels:
    app: docs
spec:
  selector:
    matchLabels:
      app: docs
  template:
    metadata:
      labels:
        app: docs
    spec:
      containers:
        - name: docs
          image: squidfunk/mkdocs-material:latest
          ports:
            - containerPort: 8000
          volumeMounts:
            - name: website
              mountPath: /docs
              subPath: docs
      volumes:
        - name: website
          persistentVolumeClaim:
            claimName: websites
