apps/websites/deploy-hadi.yaml
# SPDX-FileCopyrightText: Hadi Cherkaoui <contact@hide.cherkaoui.ch>
#
# SPDX-License-Identifier: AGPL-3.0-or-later

apiVersion: apps/v1
kind: Deployment
metadata:
  name: hadi
  namespace: websites
  labels:
    app: hadi
spec:
  selector:
    matchLabels:
      app: hadi
  template:
    metadata:
      labels:
        app: hadi
    spec:
      containers:
        - name: hadi
          image: registry.cherkaoui.ch/hadicherkaoui/portfolio:latest
          ports:
            - containerPort: 3000
              name: main
