apps/websites/svc-docs.yaml
# SPDX-FileCopyrightText: Hadi Cherkaoui <contact@hide.cherkaoui.ch>
#
# SPDX-License-Identifier: AGPL-3.0-or-later

apiVersion: v1
kind: Service
metadata:
  name: docs
  namespace: websites
spec:
  selector:
    app: docs
  type: ClusterIP
  ports:
    - port: 8000
      targetPort: 8000
      protocol: TCP
