apps/websites/svc-hadi.yaml
# SPDX-FileCopyrightText: Hadi Cherkaoui <contact@hide.cherkaoui.ch>
#
# SPDX-License-Identifier: AGPL-3.0-or-later

apiVersion: v1
kind: Service
metadata:
  name: hadi
  namespace: websites
spec:
  selector:
    app: hadi
  type: ClusterIP
  ports:
    - name: web
      port: 3000
      targetPort: 3000
      protocol: TCP
