apps/websites/svc-laura.yaml
# SPDX-FileCopyrightText: Hadi Cherkaoui <contact@hide.cherkaoui.ch>
#
# SPDX-License-Identifier: AGPL-3.0-or-later

apiVersion: v1
kind: Service
metadata:
  name: caddy-laura
  namespace: websites
spec:
  type: ClusterIP
  selector:
    app: caddy-laura
  ports:
    - port: 80
      targetPort: 80
