apps/websites/ingress-docs.yaml
# SPDX-FileCopyrightText: Hadi Cherkaoui <contact@hide.cherkaoui.ch>
#
# SPDX-License-Identifier: AGPL-3.0-or-later

apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: docs
  namespace: websites
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.tls.certresolver: letsencrypt
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`docs.cherkaoui.ch`) && PathPrefix(`/`)
      kind: Rule
      middlewares:
        - name: security-headers
          namespace: websites
      services:
        - name: docs
          port: 8000
  tls:
    certResolver: letsencrypt
